v2.6.5.1 - Fixed subtitles displaying in black only.
	 - Made grease pencil a property of the image instead of the viewer.
	 - Grease pencil drawings are saved and loaded to/from a reel.
	 - Grease pencil drawings are synced over TCP/IP.
	 - GL Snapshot now can save a sequence of frames.
	 - Added The Color Transformation Language manual ( CtlManual.pdf )
	   to the docs folder.
v2.6.5.0 - Simplified and sped up exr loader.
	 - Fixed crash of exr loader when working with an image with a single
	   view.
	 - Added 3D View to evaluate deep scanline and deep tile image.
	 - EXR loader now supports deep tile images. 
	 - Bug fixed ILM format of image sequences ( beauty.1-24.exr )
v2.6.4.4 - Sped up reading of image files (specially the first of a sequence).
	 - Bug fixed OpenEXR stereo crossed not respecting dataWindows 
	   correctly.
	 - Bug fixed Single Instance to load images that are fed thru another
	   instance of viewer.
v2.6.4.3 - Updated all platforms to OpenEXR 2.2.
v2.6.4.2 - Added missing ctl and shaders directory to win64 release.
	 - Added missing rails directory to win64 release.
	 - Added HISTORY.txt and Videos.txt to win64 release.
	 - Added docs to win64 release.
	 - Restored glDrawPixels opengl drawing albeit buggy but needed for
	   old gfx cards.
	 - Updated version from v2.6.4.0.
v2.6.4.1 - Made autofit work in EDL timeline when switching images.
	 - Fixed loading of a single image which would always load all images
	   in a sequence.
	 - Fixed BG image and wipe mode in network connections.
	 - Bug fixed color area window selection in stereo and added a square
	   displaying the mean color in the color info window.
	 - Updated to OpenEXR 2.2 on Linux.  Windows is stuck with 2.1.
	 - Updated -h (help) command-line on windows to pop up a console with
	   instructions.
v2.6.4.0 - Added a starting audio volume preference to the default 
	   audio preferences.
	 - Made preferences run when the user hits ok.  Previously ok did