@@ -67,6 +67,9 @@ Area Window</a></li>
 
   <li><a href="hotkeys.html">The Hotkeys Window</a></li>
 
+  <li><a href="3dview.html">The 3d View
+Window</a></li>
+
   <li><a href="histogram.html">The Histogram
 Window</a></li>
 
@@ -87,6 +90,10 @@ Vectorscope Window</a></li>
 The <span style="font-weight: bold;">Channel </span>display
 tells you what channel you are currently viewing (Color in the above
 picture).<br>
+The normal channels can be one of R,G,B,A and Lumma or Alpha Overlayed on top of RGB.<br>
+However, for image formats that support it like OpenEXR or Photoshop's PSD, it can also list all layers that are in the image.<br>
+For stereo images, besides the left and right views, the channel window will display a stereo.horizontal (for stereo side by side with left and right views), stereo.crossed ( for stereo side by side with right and left views reversed ), anaglyph.left ( for left view red anaglyph ) and anaglyph.right ( for right view as red anaglyph ).
+<br> 
 
 
 
