@@ -22,6 +22,9 @@ decl {\#include "gui/mrvImageBrowser.h"} {}
 
 decl {\#include "gui/mrvMainWindow.h"} {} 
 
+decl {\#include "gui/mrvImageView.h"} {selected
+} 
+
 decl {\#include "icons/icons.c"} {} 
 
 namespace mrv {open
@@ -32,12 +35,12 @@ namespace mrv {open
     } {
       {fltk::Window} uiMain {
         label {EDL Window} open
-        xywh {246 494 1015 230} resizable hotspot visible
+        xywh {261 539 1015 230} resizable hotspot visible
       } {
         {fltk::Group} uiEDLRedraw {open
           xywh {0 0 1015 230}
         } {
-          {fltk::Group} {} {open
+          {fltk::Group} {} {
             xywh {105 5 25 25}
           } {
             {fltk::Button} {} {
@@ -51,7 +54,10 @@ v->new_reel(name);}
             }
           }
           {fltk::Slider} uiTimeline {
-            xywh {95 41 920 32} type TICK_ABOVE deactivate textfont 1 textcolor 0x2020200 textsize 9 minimum 1 maximum 100 step 1 value 1 slider_size 20
+            user_data main user_data_type {mrv::ViewerUI*}
+            callback {int64_t frame = (int64_t) o->value();
+v->uiView->seek( frame );}
+            xywh {95 41 920 32} type TICK_ABOVE textfont 1 textcolor 0x2020200 textsize 9 minimum 1 maximum 100 step 1 value 1 slider_size 20
             extra_code {o->main( main );}
             class {mrv::Timeline}
           }
@@ -168,7 +174,7 @@ b->remove_reel();}
 else
 {
   o->value(-1);
-}} selected
+}}
               xywh {10 125 75 25} align 5
               extra_code {o->value( -1 );}
             } {}
